<resources>
    <string name="app_name">EventSearcher</string>
    <string name="entry">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="toComeIn">Войти</string>
    <string name="youAreNotRegisteredYet">Вы еще не зарегестрированы?</string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="registrationWithoutUnderline">Регистрация</string>
    <string name="lengthPassword">Введите не менее 6 символов</string>
    <string name="lengthLogin">Введите не менее 3 символов</string>
    <string name="email">Email</string>
    <string name="confirm">Подтвердить</string>
    <string name="areYouAlreadyRegistered">Вы уже зарегестрированны?</string>
    <string name="notValidEmail">Неверный формат email</string>
    <string name="passwordsNotCompare">Пароли не совпадают</string>
    <string name="confirmPassword">Подтвердите пароль</string>
    <string name="forget_password">Забыли пароль</string>
    <string name="registrationSuccess">Вы успешно зарегистрированы!</string>
    <string name="Map">Карта</string>
    <string name="Events">Эвенты</string>
    <string name="Subscribers">Подписки</string>
    <string name="Profile">Профиль</string>
    <string name="addEvent">Добавить эвент</string>
    <string name="newEventPlace">Место нового эвента</string>
    <string name="showMarker">Показать маркер</string>
    <string name="Header">Загаловок</string>
    <string name="Location">Местоположение</string>
    <string name="startData">Дата начала</string>
    <string name="comment">Комментарий</string>
    <string name="accept">Подтвердить</string>
    <string name="members">Участники</string>
    <string name="subscribe">подписаться</string>
    <string name="event">эвент</string>
    <string name="startTime">Время начала</string>
    <string name="Subscribe">Подписаться</string>
    <string name="EventsGone">На данный момент событий нет</string>
    <string name="Filter">Фильтер</string>
    <string name="TheDateOfTheEvent">Дата проведения эвента</string>
    <string name="subscribersGone">У вас нет подписок</string>
    <string name="zoomIn">Приблизить</string>
    <string name="zoomOut">Отдаление</string>

    <string-array name="category">
        <item>Бадминтон</item>
        <item>Баскетбол</item>
        <item>Боулинг</item>
        <item>Гольф</item>
        <item>Бег</item>
        <item>Футбол</item>
        <item>Плаванье</item>
        <item>Настольный теннис</item>
        <item>Большой теннис</item>
    </string-array>

    <array name="category_images">
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_football</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>

    <string-array name="markArray">
        <item>20</item>
        <item>30</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Применить</string>
    <string name="userName">Имя пользователя</string>
    <string name="userSecondName">Фамилия пользователя</string>
    <string name="Settings">Настройки</string>
    <string name="Avatar">Аватар пользователя</string>
    <string name="Close">Закрыть</string>
    <string name="City">Город</string>
    <string name="CountMembers">Количество участников</string>
    <string name="ChooseCity">Выберите город</string>
    <string name="Reset">Сбросить</string>
    <string name="EventCreator">Организатор</string>
    <string name="TimeStartEvent">Начало в</string>
    <string name="AboutEvent">Об эвенте</string>
    <string name="CreatorNotAddComment">Организатор не оставил комментарий</string>
    <string name="saveDataUser">Запомнить пользователя?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="loadPhoto">Загрузить фото</string>
    <string name="Skip">Пропустить</string>
    <string name="Phone">Телефон</string>

</resources>