<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.events.filter.FilterActivity"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/event_list_filters_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_close"
        android:background="@color/white"
        android:contentDescription="@string/Close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/event_list_filters_close"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="30dp"
                android:text="@string/Filter"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/event_list_filters_reset"
                style="@style/RoundedCornerButtonWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:text="@string/Reset" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/City">

            <AutoCompleteTextView
                android:id="@+id/event_list_filters_city_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CountMembers"/>

            <TextView
                android:id="@+id/event_list_filters_start_count_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="-"/>

            <TextView
                android:id="@+id/event_list_filters_end_count_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="30"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/event_list_filters_range_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:values="@array/markArray"
                android:valueFrom="0"
                android:valueTo="50"

                app:labelBehavior="gone"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_list_filters_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TheDateOfTheEvent"
            app:startIconDrawable="@drawable/ic_calendar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:focusable="false"
                android:fontFamily="sans-serif-condensed"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/event_list_filters_apply"
        style="@style/RoundedCornerButton"
        android:layout_marginBottom="20dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>